-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.58 2007-08-28 01:13:39 remko Exp $
-----------------------------------------------------------------------------------------

2007-08-27	remko
	* ps2raster.c:		Added -P to and removed -V from the commandline description
	* configure.in:		On Linux: Use "gcc -shared", not "ld -shared"

2007-08-23	pwessel
	* pslegend.c:		Added @ECHO OFF to avoid commands being echoed into PS under WIN32
	
2007-08-23	remko
	* ex??/job??.sh:	Properly identified GMT programs used in example scripts.
	* src/*.txt:		Moved explanation of pens, fill and color to separate sections.
	* src/explain_{fill,color}.txt:	Newly intorduced sections.
	* src/explain_-G*.txt:	Made superfluous. Removed.

2007-08-22	pwessel
	* gmt_init.c:		For quoted lines, the :Lh modifier did not reset label if
				a segment header had no label specified.  Also, label would
				include the leading " in a multi-word label.
	* gmt_support.c:	Added +n<dx/dy> to nudge placement of quoted line labels.

2007-08-21	pwessel
	* gmt_io.c:		Combinations of OUTPUT_DEGREE_FORMAT=ddd:mm:ss.xxxF and -:
				would add W|E to lat and S|N to lon for formatted output
	* mapproject.c:		For UTM projections with -C, the -R is now optional.  If not set
				then UTM zone specification must have some latitude info in it.
				If a unique zone is specified then -R is set accordingly.
	* gmt_init.c:		Now, UTM zones may be A,B,Y,Z or 1-60 with modifiers
				C-X (except I and O).  
	
2007-08-12	pwessel
	* grdcut.c:		Domain check failed for geographic 360-degree grid w/ -fg

.
2007-08-08	pwessel
	* grdfilter.c:		-I<nx>+/<ny>+ not propagated to output setup
.
2007-08-01	pwessel
	* gmt_support.c:	ddd:mm.xx (2 or more x) failed.
	
2007-07-31	pwessel
	* psxy.c:		-E.../[-|+]<pen> where + means apply cpt color (-C) to symbol & bar
					- means apply to bar only (no fill).  Likewise, -W[+|-]<pen> controls